--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         }
     </style>
     <title>Template </title>
-    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet"> -->
     <link rel="preload" href="assets/css/main.css" as="style" onload="this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="assets/css/main.css">
@@ -777,7 +777,7 @@
     </footer>
 
 
-    <!-- <script>(function (href, before, media) { "use strict"; var ss = window.document.createElement("link"); var ref = before || window.document.getElementsByTagName("script")[0]; var sheets = window.document.styleSheets; ss.rel = "stylesheet"; ss.href = href; ss.media = "only x"; ref.parentNode.insertBefore(ss, ref); function toggleMedia() { var defined; for (var i = 0; i < sheets.length; i++) { if (sheets[i].href && sheets[i].href.indexOf(href) > -1) { defined = true; } } if (defined) { ss.media = media || "all"; } else { setTimeout(toggleMedia); } } toggleMedia(); return ss; })('//fonts.googleapis.com/css?family=Cairo:600,700,900&amp;subset=arabic');</script> -->
+    <script>(function (href, before, media) { "use strict"; var ss = window.document.createElement("link"); var ref = before || window.document.getElementsByTagName("script")[0]; var sheets = window.document.styleSheets; ss.rel = "stylesheet"; ss.href = href; ss.media = "only x"; ref.parentNode.insertBefore(ss, ref); function toggleMedia() { var defined; for (var i = 0; i < sheets.length; i++) { if (sheets[i].href && sheets[i].href.indexOf(href) > -1) { defined = true; } } if (defined) { ss.media = media || "all"; } else { setTimeout(toggleMedia); } } toggleMedia(); return ss; })('//fonts.googleapis.com/css?family=Cairo:600,700,900&amp;subset=arabic');</script>
 
 
     <script defer src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
@@ -786,7 +786,8 @@
     <script defer src="assets/js/main.js"></script>
     <script>
         window.onload = function (params) {
-            $('.p-loading').css('display', 'none')
+            $('.p-loading').css('display', 'none');
+            $('.box-audio').css('display','block');
         }
     </script>
 
