--- a/index.html
+++ b/index.html
@@ -772,20 +772,22 @@
             <ul class="harmonydocuments__table__contents">
                 <li class="harmonydocuments__item">
                     <h5 class="harmonydocuments__item__title">
-                        <a href="/harmony-program/letter-from-abu-hamza-to-ansar-al-sunnah-highlighting-divisions-original-language-2/">Letter from Abu Hamza to Ansar al-Sunnah Highlighting Divisions</a>
+                        <a href="/harmony-program/letter-from-abu-hamza-to-ansar-al-sunnah-highlighting-divisions-original-language-2/">Naruto Uzumaki | Naruto Wiki | FANDOM powered by Wikia</a>
                     </h5>
-                    <p class="harmonydocuments__item__description">This document is a letter from Abu Hamzah in response to unfriendly letters he received. In his letter, Abu Hamzah...</p>
+                    <p class="harmonydocuments__item__description">Naruto Uzumaki est le personnage principal du manga Naruto inventé par Masashi Kishimoto. Dans l'univers de la série, Naruto
+                    est un jeune ninja du village de Konoha...</p>
                     <p class="harmonydocuments__item__refnumber upperspace">
-                        NMEC-2007-636878
+                        XMRL-00362Xa-658A
                     </p>
                 </li>
                 <li class="harmonydocuments__item">
                     <h5 class="harmonydocuments__item__title">
-                        <a href="/harmony-program/letter-from-abu-hamza-al-mujahir-to-abi-abdullah-al-shafii-original-language-2/">Letter from Abu Hamza al-Mujahir to Abi `Abdullah al-Shafi`i</a>
+                        <a href="/harmony-program/letter-from-abu-hamza-al-mujahir-to-abi-abdullah-al-shafii-original-language-2/">Liste des épisodes de One Piece — Wikipédia</a>
                     </h5>
-                    <p class="harmonydocuments__item__description">This document is part of a letter from Abu Hamza to Abu `Abdullah al-Shafi`i. In this letter, Abu Hamza starts...</p>
+                    <p class="harmonydocuments__item__description">One Piece est une série de mangas shōnen créée par Eiichirō Oda. Elle est prépubliée depuis le 22 juillet 1997 dans le magazine
+                    hebdomadaire Weekly Shōnen Jump...</p>
                     <p class="harmonydocuments__item__refnumber upperspace">
-                        NMEC-2007-636898
+                         XMRL-00362Xa-658A
                     </p>
                 </li>
         
