--- a/index.html
+++ b/index.html
@@ -769,7 +769,10 @@
                 <p class="harmonydocuments__item__description">Description</p>
                 <p class="harmonydocuments__item__refnumber">Reference Number</p>
             </header>
+
+            <!-- Fetch Data from Database -->
             <ul class="harmonydocuments__table__contents">
+                <!-- Exmple 1 -->
                 <li class="harmonydocuments__item">
                     <h5 class="harmonydocuments__item__title">
                         <a href="/harmony-program/letter-from-abu-hamza-to-ansar-al-sunnah-highlighting-divisions-original-language-2/">Naruto Uzumaki | Naruto Wiki | FANDOM powered by Wikia</a>
@@ -780,6 +783,8 @@
                         XMRL-00362Xa-658A
                     </p>
                 </li>
+
+                <!-- Exemple 2 -->
                 <li class="harmonydocuments__item">
                     <h5 class="harmonydocuments__item__title">
                         <a href="/harmony-program/letter-from-abu-hamza-al-mujahir-to-abi-abdullah-al-shafii-original-language-2/">Liste des épisodes de One Piece — Wikipédia</a>
@@ -790,10 +795,11 @@
                          XMRL-00362Xa-658A
                     </p>
                 </li>
-        
+
+                <!-- Pagination -->
                 <nav class="paginationlinks">
                 </nav>
-                <!-- .pagination -->
+                <!-- Pagination -->
             </ul>
         </div>
         <!-- End: Exemple of Seached Items -->
@@ -832,6 +838,16 @@
             <p class="title-date">
                 <p>Tuneln Conversation berner and troo</p>
                 <span class="date">18/10/2018</span>
+                <span class="favoris">
+                    <!-- When is in favoris -->
+                    <i> 
+                        <img width="15" src="assets/image/like.svg" alt="">
+                    </i>
+                    <!-- when not -->
+                    <i>
+                        <img width="15" src="assets/image/no-like.svg" alt="">
+                    </i>
+                </span>
             </p>
         </div>
         <div class="clip-audio">
