--- a/index.html
+++ b/index.html
@@ -775,6 +775,16 @@
                 <!-- Exmple 1 -->
                 <li class="harmonydocuments__item">
                     <h5 class="harmonydocuments__item__title">
+                        <span class="favoris">
+                            <!-- When is in favoris -->
+                            <i>
+                                <img width="15" src="assets/image/like.svg" alt="">
+                            </i>
+                            <!-- when not -->
+                            <!-- <i>
+                                <img width="15" src="assets/image/no-like.svg" alt="">
+                            </i> -->
+                        </span>
                         <a href="/harmony-program/letter-from-abu-hamza-to-ansar-al-sunnah-highlighting-divisions-original-language-2/">Naruto Uzumaki | Naruto Wiki | FANDOM powered by Wikia</a>
                     </h5>
                     <p class="harmonydocuments__item__description">Naruto Uzumaki est le personnage principal du manga Naruto inventé par Masashi Kishimoto. Dans l'univers de la série, Naruto
@@ -787,6 +797,14 @@
                 <!-- Exemple 2 -->
                 <li class="harmonydocuments__item">
                     <h5 class="harmonydocuments__item__title">
+                        <!-- When is in favoris -->
+                            <!-- <i>
+                                <img width="15" src="assets/image/like.svg" alt="">
+                            </i> -->
+                            <!-- when not -->
+                            <i>
+                                <img width="15" src="assets/image/no-like.svg" alt="">
+                            </i>
                         <a href="/harmony-program/letter-from-abu-hamza-al-mujahir-to-abi-abdullah-al-shafii-original-language-2/">Liste des épisodes de One Piece — Wikipédia</a>
                     </h5>
                     <p class="harmonydocuments__item__description">One Piece est une série de mangas shōnen créée par Eiichirō Oda. Elle est prépubliée depuis le 22 juillet 1997 dans le magazine
