--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <link rel="stylesheet" href="assets/css/plyr.css">
     </noscript>
 
-    
+
 
     <script>
         /*loadCss*/
@@ -275,7 +275,7 @@
                         <!-- End: When user not connected -->
 
                         <!--  Start: When user connected -->
-                        <li  class="menu-item menu-item-has-children _rtl user-info">
+                        <li class="menu-item menu-item-has-children _rtl user-info">
                             <img id="avatar-user" src="assets/image/avatar.png" alt="">
                             <span class="name">
                                 <span class="icon icon-chevron-small-down"></span>
@@ -429,8 +429,9 @@
                                         <a href="https://ctc.usma.edu/pulling-back-the-curtain-an-inside-look-at-the-islamic-states-media-organization/">الفيلم الرابع من أفلام السرعة والتشويق (ذا فاست آند ذا فيوريوس) من بطولة فين ديزل</a>
                                     </h5>
                                     <p class="bucket__excerpt">
-                                         لفيلم الرابع من أفلام السرعة والتشويق (ذا فاست آند ذا فيوريوس) من بطولة فين ديزل وبول ووكر. يعود المجرم السابق (دوم توريتو)
-                                        إلى لوس أنجلوس للعمل مع عميل الإف بي آي (براين أو كونور)، بهدف الإطاحة بأحد تجار المخدرات....
+                                        لفيلم الرابع من أفلام السرعة والتشويق (ذا فاست آند ذا فيوريوس) من بطولة فين ديزل وبول ووكر. يعود المجرم السابق (دوم توريتو)
+                                        إلى لوس أنجلوس للعمل مع عميل الإف بي آي (براين أو كونور)، بهدف الإطاحة بأحد تجار
+                                        المخدرات....
                                     </p>
                                     <a href="https://ctc.usma.edu/pulling-back-the-curtain-an-inside-look-at-the-islamic-states-media-organization/" title="Read الفيلم الرابع من أفلام السرعة والتشويق (ذا فاست آند ذا فيوريوس) من بطولة فين ديزل"
                                         class="bucket__callout callout">Read</a>
@@ -448,11 +449,10 @@
                                         <a href="https://ctc.usma.edu/june-2018-cologne-ricin-plot-new-threshold-jihadi-bio-terror/">جيسون بورن شخصية أفلام الآكشن الشهيرة يعود من جديد إلى عالم مليء بالمغامرة</a>
                                     </h5>
                                     <p class="bucket__excerpt">
-                                         شخصية أفلام الآكشن الشهيرة جيسون بورن، يعود من جديد إلى عالم مليء بالمغامرة والتشويق، ويكتشف المزيد عن ماضيه وأسرار لم تكن
+                                        شخصية أفلام الآكشن الشهيرة جيسون بورن، يعود من جديد إلى عالم مليء بالمغامرة والتشويق، ويكتشف المزيد عن ماضيه وأسرار لم تكن
                                         في الحسبان...
                                     </p>
-                                    <a href="https://ctc.usma.edu/june-2018-cologne-ricin-plot-new-threshold-jihadi-bio-terror/" title=" جيسون بورن"
-                                        class="bucket__callout callout">Read</a>
+                                    <a href="https://ctc.usma.edu/june-2018-cologne-ricin-plot-new-threshold-jihadi-bio-terror/" title=" جيسون بورن" class="bucket__callout callout">Read</a>
                                 </div>
                             </div>
                         </div>
@@ -784,8 +784,8 @@
                         </span>
                         <a href="/harmony-program/letter-from-abu-hamza-to-ansar-al-sunnah-highlighting-divisions-original-language-2/">ناروتو اوزوماكي ناروتو ويكي مدعوم من ويكيا</a>
                     </h5>
-                    <p class="harmonydocuments__item__description">Naruto Uzumaki est le personnage principal du manga Naruto inventé par Masashi Kishimoto. Dans l'univers de la série, Naruto
-                    est un jeune ninja du village de Konoha...</p>
+                    <p class="harmonydocuments__item__description">Naruto Uzumaki est le personnage principal du manga Naruto inventé par Masashi Kishimoto. Dans l'univers
+                        de la série, Naruto est un jeune ninja du village de Konoha...</p>
                     <p class="harmonydocuments__item__refnumber upperspace">
                         XMRL-00362Xa-658A
                     </p>
@@ -795,6 +795,7 @@
                 <li class="harmonydocuments__item">
                     <h5 class="harmonydocuments__item__title">
                         <!-- When is in favoris -->
+                        <span class="favoris">
                             <!-- <i>
                                 <img width="20" src="assets/image/like.svg" alt="">
                             </i> -->
@@ -802,12 +803,13 @@
                             <i>
                                 <img width="20" src="assets/image/no-like.svg" alt="">
                             </i>
+                        </span>
                         <a href="/harmony-program/letter-from-abu-hamza-al-mujahir-to-abi-abdullah-al-shafii-original-language-2/">Liste des épisodes de One Piece — Wikipédia</a>
                     </h5>
-                    <p class="harmonydocuments__item__description">One Piece est une série de mangas shōnen créée par Eiichirō Oda. Elle est prépubliée depuis le 22 juillet 1997 dans le magazine
-                    hebdomadaire Weekly Shōnen Jump...</p>
+                    <p class="harmonydocuments__item__description">One Piece est une série de mangas shōnen créée par Eiichirō Oda. Elle est prépubliée depuis le 22 juillet
+                        1997 dans le magazine hebdomadaire Weekly Shōnen Jump...</p>
                     <p class="harmonydocuments__item__refnumber upperspace">
-                         XMRL-00362Xa-658A
+                        XMRL-00362Xa-658A
                     </p>
                 </li>
 
@@ -833,7 +835,8 @@
                 <img width="30" src="assets/image/no-like.svg" alt="">
             </i>
         </span>
-        <video id="plyr-video" poster="https://http2.mlstatic.com/painel-lona-fosca-sublimaco-150-por-10-dragon-boll-super-D_NQ_NP_636547-MLB27867713255_072018-F.jpg" controls>
+        <video id="plyr-video" poster="https://http2.mlstatic.com/painel-lona-fosca-sublimaco-150-por-10-dragon-boll-super-D_NQ_NP_636547-MLB27867713255_072018-F.jpg"
+            controls>
             <source src="" type="video/mp4">
             <!-- Captions are optional -->
             <!-- <track kind="captions" label="English captions" src="/path/to/video-caption.vtt" srclang="en" default> -->
@@ -867,7 +870,7 @@
                 <span class="date">18/10/2018</span>
                 <span class="favoris">
                     <!-- When is in favoris -->
-                    <i> 
+                    <i>
                         <img width="15" src="assets/image/like.svg" alt="">
                     </i>
                     <!-- when not -->
@@ -895,7 +898,7 @@
     <script>
         window.onload = function (params) {
             $('.p-loading').css('display', 'none');
-            $('.box-audio').css('display','block');
+            $('.box-audio').css('display', 'block');
         }
     </script>
 
