--- a/index.html
+++ b/index.html
@@ -371,17 +371,17 @@
                 <div class="container fullwidth">
                     <h2 class="carousel__title _rtl">الأكثر بحثا</h2>
                 </div>
-                <div class="carouselwrap">
+                <div class="carouselwrap ">
 
                     <!-- Start: carousel Of items -->
                     <div class="carousel__track">
-                        <div class="carousel _rtl" data-screen-view="4" data-tablet-view="2" data-mobile-view="1" data-position="">
+                        <div class="carousel " data-screen-view="4" data-tablet-view="2" data-mobile-view="1" data-position="">
                             <!-- start: fetch Data from Database  -->
                             <!-- <element> -->
                             <!-- End: Fetch DT -->
 
                             <!-- Exemple 1 -->
-                            <div class="carousel__bucket bucket">
+                            <div class="carousel__bucket bucket _rtl">
                                 <div class="bucket__image imgbackground">
                                     <a href="https://ctc.usma.edu/two-houses-divided-conflict-syria-shaped-future-jihadism/" title="Read Two Houses Divided: How Conflict in Syria Shaped the Future of Jihadism">
                                         <img src="https://ctc.usma.edu/app/uploads/2018/10/CTC-SENTINEL-102018_cover-232x300.jpg">
@@ -400,7 +400,7 @@
                                 </div>
                             </div>
                             <!-- Exemple 2 -->
-                            <div class="carousel__bucket bucket">
+                            <div class="carousel__bucket bucket _rtl">
                                 <div class="bucket__image imgbackground">
                                     <a href="https://ctc.usma.edu/al-qaidas-first-american-foreign-fighter-9-11/" title="Read Al-Qa`ida’s First American Foreign Fighter after 9/11">
                                         <img src="https://ctc.usma.edu/app/uploads/2018/09/CTC-SENTINEL-092018_cover-232x300.jpg">
@@ -418,7 +418,7 @@
                                 </div>
                             </div>
                             <!-- Exemple 3 -->
-                            <div class="carousel__bucket bucket">
+                            <div class="carousel__bucket bucket _rtl">
                                 <div class="bucket__image imgbackground">
                                     <a href="https://ctc.usma.edu/pulling-back-the-curtain-an-inside-look-at-the-islamic-states-media-organization/" title="Read الفيلم الرابع من أفلام السرعة والتشويق (ذا فاست آند ذا فيوريوس) من بطولة فين ديزل">
                                         <img src="https://ctc.usma.edu/app/uploads/2018/08/Advice-for-Media-Mujahid-highlight-image-300x215.jpg">
@@ -438,7 +438,7 @@
                                 </div>
                             </div>
                             <!-- Exemple 4 -->
-                            <div class="carousel__bucket bucket ">
+                            <div class="carousel__bucket bucket _rtl">
                                 <div class="bucket__image imgbackground">
                                     <a href="https://ctc.usma.edu/june-2018-cologne-ricin-plot-new-threshold-jihadi-bio-terror/" title=" جيسون بورن">
                                         <img src="https://ctc.usma.edu/app/uploads/2018/08/CTC-SENTINEL-082018_cover-232x300.jpg">
