--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <!-- start: Navbar -->
         <nav class="navprimary">
             <div class="navwrap" aria-hidden="false">
-                <h6 class="showmobile navheading" data-title="القائمة الرئيسية">القائمة الرئيسية</h6>
+                <h6 class="showmobile navheading" data-title=""></h6>
                 <div class="nav__outer scrollable">
                     <ul id="menu-primary" class="nav">
 
@@ -863,9 +863,9 @@
 
     <!-- Start: box (Audio) -->
     <div class="box-audio">
-        
+<!--         
         <button>إخفاء</button>
-        <button>إظهار</button>
+        <button>إظهار</button> -->
         <div class="info-audio">
             <img width="56" src="https://avatarfiles.alphacoders.com/946/94610.jpg" alt="">
             <p class="title-date">
