--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             height: 100%;
             width: 100%;
             background: #011A24;
-            z-index: 99999;
+            z-index: 99999999;
             display: flex;
             align-items: center;
             justify-content: center;
